# micro-fe-services

./: .gitignore  .watchmanconfig  Cargo.toml  Cross.toml  Makefile  README.md  app.json  exmaple.env  go.mod  go.sum  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.sqlx/: query-087fb7b7dde45cb9290260cc93162130e566f7eafb5f9d0da20c628a7c59bed1.json  query-3677009a1176666d5b3704c6478ead0ab8d1b9969fbda005296db12e9ec65eb3.json  query-37a4ed4997d9b948dafde725aa78c33462b4b9e78671afcd2faf25dd1c22d6da.json  query-3c81e2499b97bc902aae8462da86359d5f31d9b68eeda52a9fef639ff70459e2.json  query-4ccac231103cf27daaec21c621ab6f00dd8d4dd3254ce8f29af5642e19369b74.json  query-5dc5fd2664743e9bc26c1a86ac321b06b735c3651e9d0a755e26a84a68ca2524.json  query-93e8617e36a7452c54db72343001833fc3a2af7dfb57514ef5e1cb2206b40283.json  query-9974cf960f707ee1d1513badf223d4806995311e608d16a395a7e20adacafe4f.json  query-cd27e6c8db8ec971e41ba1ec93645cd439555ba5d6c5eafac97d6b1ad8d42405.json  query-dd33477c39e88b69f4bb0bd2e2dfc92fcda1be9e2a80f9f1b951d6f81ddb3ecc.json
cmd/: main.go
database/: Cargo.toml
deployment/: address.Dockerfile  authmgmt.Dockerfile  booking.Dockerfile  callcenter.Dockerfile  communicate.Dockerfile  (+6 more)
services/usermgmt/: Cargo.toml  main.go
services/usermgmt/entity/: user.go
services/usermgmt/service/: service_user.go
services/usermgmt/src/: main.rs
services/usermgmt/src/controller/: healthchecker.rs  mod.rs  pub_user.rs  user.rs
services/usermgmt/src/helpers/: app.rs  firebase.rs  mod.rs
services/usermgmt/src/middleware/: mod.rs
services/usermgmt/src/middlewares/: validate_jwt.rs
services/usermgmt/src/model/: user.rs
services/usermgmt/src/schema/: mod.rs
services/usermgmt/src/schema/authmgmt/: mod.rs
(+465 files in other folders)
