[workspace]
members = [
    "services/usermgmt",
    "libs/rust/*"
]

resolver = "2" 

[workspace.dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.105"
sqlx = { version ="0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"]}
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
schemars = {version = "0.8", features = ["chrono"] }