[package]
name = "usermgmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true}
reqwest = { workspace = true}
database = { path = "../../libs/rust/database"}
types = { path = "../../libs/rust/types"}
serde_json = {workspace = true}
sqlx = { workspace = true}
serde = { workspace = true}
uuid ={ workspace = true}

[[bin]]
name = "usermgmt"
path = "src/main.rs"